# 23203_knyazkov

./: .gitignore  README.md  hashtable  hashtable.cpp  vector  vector.cpp
java/projects/BloomFilter/: settings.gradle.kts
java/projects/ForthJ/: build.gradle.kts  settings.gradle.kts
java/projects/HMClone/: build.gradle.kts  settings.gradle.kts
java/projects/Parallel/: settings.gradle.kts
java/projects/quick/: Kata.java
lab1/: .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists_inone.txt  ctors.cpp  hashtable.cpp  hashtable.h  main.cpp  methods.cpp  operators.cpp
lab1/.cache/clangd/index/: all_tests.cc.366E5EAC79CBD8FF.idx  ctors.cpp.618AA346EC03E4FC.idx  ctors.cpp.EBF60B1C18104BF1.idx  ctors_tests.cc.71008D53ED157162.idx  ctors_tests.cc.F7DB5660A8364AE5.idx  gmock-actions.h.8F05B620571360DA.idx  gmock-all.cc.C597DC2977190F0D.idx  gmock-cardinalities.cc.31508CC8E90561BA.idx  gmock-cardinalities.h.F09EB5CACE099DAA.idx  gmock-function-mocker.h.A4540978405678EF.idx  gmock-generated-actions.h.5301FE44A3176B6A.idx  gmock-internal-utils.cc.FF0993210ED37B90.idx  gmock-internal-utils.h.CE542249ABDB55CC.idx  gmock-matchers.cc.8E75DFBC1304D893.idx  gmock-matchers.h.196938C9001EEC95.idx  gmock-matchers.h.21C7E7670CD52E0F.idx  gmock-more-actions.h.BDC8DEA30DCFAA45.idx  gmock-more-matchers.h.0BFB7A3F03085B25.idx  gmock-nice-strict.h.7D15BE7C2639143E.idx  gmock-port.h.CEDED26C415BF9BF.idx  gmock-port.h.D3BA267065DA0323.idx  gmock-pp.h.B30B2933D8B75425.idx  gmock-spec-builders.cc.C050B845AF47B12B.idx  gmock-spec-builders.h.B4912449694A5047.idx  gmock.cc.CCA28D5FFF12D02F.idx  gmock.h.EEF35647EBD09FD5.idx  gmock_main.cc.0B2F691537EA3A78.idx  gtest-all.cc.72BD8CF35450CF0D.idx  gtest-assertion-result.cc.0652DEAA691E6F87.idx  gtest-assertion-result.h.ABF4B04FC8714706.idx  gtest-death-test-internal.h.C58388B45687068F.idx  gtest-death-test.cc.2AEEC2530EF253DA.idx  gtest-death-test.h.DEF384D7550049B2.idx  gtest-filepath.cc.BBF82FD6B21EDEFE.idx  gtest-filepath.h.C116DFFA0E864FA2.idx  gtest-internal-inl.h.806ADC22CEB25E7A.idx  gtest-internal.h.75A3802BE3D365F7.idx  gtest-matchers.cc.EE8623AC77D10840.idx  gtest-matchers.h.E4743BB31F43AA79.idx  gtest-message.h.75BE0BAE997DD467.idx  (+40 more)
lab1/src/: Tests.h  ctors.cpp  hashtable.cpp  hashtable.h  main.cpp  methods.cpp  operators.cpp
lab1/test/: CMakeLists.txt  ctors_tests.cc  methods_tests.cc  operators_tests.cc  test.cc
lab1/test/src/: all_tests.cc  ctors_tests.cc  main_test.cc  methods_tests.cc  operators_tests.cc
lab2/: CMakeLists.txt  ExecutionContext.hpp  Literal.hpp  Token.hpp  UserInterface.cpp  UserInterface.hpp  expressions.cpp  expressions.hpp  factory.hpp  forth.cpp  forth.hpp  interpreter.cpp  interpreter.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp
lab2/src/: ExecutionContext.cpp  ExecutionContext.hpp  Token.hpp  UserInterface.cpp  UserInterface.hpp  expressions.cpp  expressions.hpp  factory.hpp  forth.cpp  forth.hpp  interpreter.cpp  interpreter.hpp  main.cpp  scanner.cpp
lab2/src/input/: even.txt  factorial.txt  fibonacci.txt  loops.txt  posneg.txt  writeeven.txt
lab2/temp/: out  quick.cpp
lab2/test/: CMakeLists.txt
lab2/test/src/: all_tests.cc
lab22/: CMakeLists.txt  Token.hpp  UserInterface.cpp  UserInterface.hpp  definition.hpp  expressions.cpp  expressions.hpp  factory.hpp  forth.cpp  forth.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp
lab22_copy/: CMakeLists.txt  UserInterface.cpp  UserInterface.hpp  factory.hpp  forth.cpp  forth.hpp  parser.cpp  scanner.hpp
lab3/: Alien.cpp  Alien.hpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  Collidable.hpp  CollisionModule.cpp  CollisionModule.hpp  Draw.cpp  Drawable.hpp  Engine.cpp  Engine.hpp  Events.hpp  Fabric.hpp  Game.cpp  Game.hpp  GameEventListener.hpp  GameOver.cpp  Input.cpp  Input.hpp  Invaders.cpp  Invaders.hpp  Level.cpp  Level.hpp  Menu.cpp  Menu.hpp  Object.hpp  Player.cpp  Player.hpp  Quit.cpp  RenderModule.cpp  RenderModule.hpp  State.hpp  StateManager.cpp  StateManager.hpp  Subject.cpp  Subject.hpp  Update.cpp  dummy.cpp  main.cpp
lab3/.cache/clangd/index/: Alien.cpp.5E62E4A934AF2353.idx  Alien.hpp.850572C7EC2935BA.idx  Bullet.cpp.5D2B54CAD9CC76D7.idx  Bullet.hpp.84D702D876056ECA.idx  Collidable.hpp.9BA39B58B276B8F8.idx  CollisionModule.cpp.1EC56B381C81F404.idx  CollisionModule.hpp.65E7B99834A88B14.idx  Draw.cpp.054B39F04AA9CC30.idx  Engine.cpp.880BCAC41A908436.idx  Engine.hpp.6E4F4C8E5CFC7F0C.idx  Events.hpp.C3B60CB735E54E01.idx  GameEventListener.cpp.B418B3EDF0C44852.idx  GameEventListener.hpp.0ED981D540C67776.idx  GameOver.cpp.868CB9982D93EA50.idx  Input.cpp.76FC49F8CB0BA02F.idx  Invaders.cpp.638BDFCF690E06CF.idx  Invaders.hpp.8404AB67B57EBB7D.idx  Level.cpp.AD2A083E7BD9446F.idx  Level.hpp.D792F017B53CA83C.idx  Menu.cpp.9A632A82C50D9E49.idx  Object.hpp.C470053679887C80.idx  Player.cpp.BF542848A559E057.idx  Player.hpp.A5DB1920885CAF12.idx  Quit.cpp.19292D35E302ECA5.idx  RenderModule.cpp.B4BD7498C6C5D929.idx  RenderModule.hpp.F1E44A90649505F5.idx  RenderQueue.hpp.B42CF7DFCBE06CB8.idx  State.hpp.219168AD3513C0EC.idx  StateManager.cpp.84E41421FAC93EB1.idx  StateManager.hpp.706E52E64F21C2ED.idx  Subject.cpp.814B61099F55EA0F.idx  Subject.hpp.DD06DC88482B6A11.idx  Update.cpp.3EDA995605D03C04.idx  main.cpp.6DD94196A005883A.idx
sem/: main.cpp  smrtp
sem/shared_ptr/: main.cpp  sharedP
sem/virtual/: battlecruiser.cpp  battlecruiser.h  engine.cpp  engine.h  factory.h  main  main.cpp  unit.h  zergling.cpp  zergling.h
temp/23203_knyazkov-main/lab1/src/: ctors.cpp  methods.cpp
temp/23203_knyazkov-main/lab1/test/: CMakeLists.txt  CMakeLists_old.txt
temp/23203_knyazkov-main/lab1/test/src/: operators_tests.cc
temp/23203_knyazkov-main/lab2/: Token.hpp  expressions.hpp  forth.hpp  scanner.hpp  value.hpp
temp/23203_knyazkov-main/lab2/test/: CMakeLists.txt
temp/23203_knyazkov-main/lab2/test/src/: all_tests.cc  methods_tests.cc  test.cc
temp/23203_knyazkov-main/lab3/: .clang-tidy  Alien.hpp  Bullet.cpp  Bullet.hpp  CollisionInterface.hpp  Engine.hpp  GameOver.cpp  Invaders.cpp  Invaders.hpp  State.hpp  StateManager.cpp  dummy  main.cpp
(+158 files in other folders)
